# VisualEditor

./: ..gitignore.un~  .gitignore  Canvas.py  CanvasUtils.py  CreateFile.java  DataFlow.py  EditorWindow.py  Evaluator.py  FileFromInterfaceModal.py  Function.py  GlobalData.py  LICENSE  Label.py  LabelModal.py  MapData with Labels example.numbers  MapData.py  MapModal.py  MapNode.py  OpenModal.py  README.md  README.txr  README.txt  RunModal.py  SaveModal.py  Selectable.py  StringUtils.py  Transpiler.java  Tree.py  Utils.py  Wire.py  WireNode.py  WireSegment.py  data_bus.txt  firstfile.py  interfaceApp.py  main.py  quadratic with lambdas mock.pages
Bindings/: Evaluator.py  Navigator.py  Nester.py  Runner.py  Selector.py  WireAdder.py
Interface/: InterfaceLabels.py  InterfaceModal.py  MapInterface.py  MapInterfaceNode.py
ObjectHierarchy/: Object.py  ObjectReference.py  Selectable.py
actors/: Evaluator.py  Navigator.py  Runner.py
flask-project/: .hello.py.un~  app.py  app2.py  clj_example.py  clojure_to_jsx_.py  clojurestuff.clj  ir  ir_utils.py  load_ir_from_text.py  service.py
generatedCode/: Example.java
lang-spec/: Tree  ir-spec.md  ir-spec2.md
lib/: 123  a  abstract art  det  det_nested  det_nested2  feedthrough mock  lines  linetest  pretty_pictures  quadratic_new  save  save2  save_test  sss  test  wire  www  x  xx
notes/: random examples  (+6 more)
rust-app/: Cargo.toml  Dioxus.toml
rust-app/assets/: main.css
rust-app/src/: ExpressionX.rs  main.rs
rust-app/src/compiler/: mod.rs
rust-app/src/ir/: Types.rs  components.rs  mod.rs  render.rs  world.rs
(+327 files in other folders)
