[package]
name = "rust-app"
version = "0.1.0"
authors = ["David Lalo <djlalo08@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["desktop"] }

# Debug
dioxus-logger = "0.5.1"
